# Shangdong_project

./: README.md  README_cn.md
Sensor_part/: start_bunker.sh  start_bunker_novis.sh  start_camera.sh  start_imu0.sh  start_imu1.sh  start_marvelmind.sh  start_rtk0.sh  start_rtk1.sh
Sensor_part/devel/: .catkin  local_setup.fish
Sensor_part/devel/include/bunker_msgs/: BunkerBmsStatus.h  BunkerMotorState.h  BunkerRsStatus.h  BunkerStatus.h
Sensor_part/devel/include/yesense_imu/: YesenseImuAllData.h  YesenseImuCmdResp.h  YesenseImuEulerAngle.h  YesenseImuGnssData.h  YesenseImuGpsData.h  YesenseImuInertialData.h  YesenseImuLocation.h  YesenseImuMasterGnssData.h  YesenseImuNavData.h  YesenseImuQuaternion.h  YesenseImuSensorData.h  YesenseImuSlaveGnssData.h  YesenseImuStatus.h  YesenseImuUtcTime.h  YesenseImuVelocity.h  YesenseNodeConfig.h
Sensor_part/devel/lib/bunker_base/: bunker_base_node
Sensor_part/devel/lib/orbbec_camera/: list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node
Sensor_part/devel/lib/pkgconfig/: bunker_base.pc  bunker_bringup.pc  bunker_msgs.pc  orbbec_camera.pc  ugv_sdk.pc  yesense_imu.pc
Sensor_part/src/yesense/launch/: run_without_rviz0.launch  run_without_rviz1.launch
Visual_part/: start_seg.sh  start_yolo.sh
Visual_part/devel/: .catkin  local_setup.sh  setup.fish
Visual_part/devel/include/yolov8_ros_msgs/: BoundingBox.h  BoundingBoxes.h
Visual_part/src/avoidance/: CMakeLists.txt
Visual_part/src/road_seg/: CMakeLists.txt
Visual_part/src/roi/: CMakeLists.txt  package.xml
doc/: .~lock.完全版步骤.docx#  .~lock.完全版步骤.odt#  gps+imu导航设计.docx  quick_start_cn.md  完全版步骤.docx  完全版步骤.odt  完全版步骤.xml  小车平台搭建说明.txt  步骤.txt
navi_eskf/: start_navi.sh
navi_eskf/devel/: .catkin  local_setup.fish  local_setup.sh  setup.sh
navi_eskf/src/eskf_navi/: CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_test_converter.txt  CMakeLists_test_topomap.txt  package.xml
navi_eskf/src/eskf_navi/config/mapping/: grid_map_config.yaml  topology_map.yaml
navi_eskf/src/eskf_navi/include/mapping/: coordinate_converter.h  grid_map.h  topology_map.h
navi_eskf/src/eskf_navi/include/navigation/: navigation_node.h
navi_eskf/src/eskf_navi/launch/: grid_map.launch  navigation.launch  topology_map.launch
navi_eskf/src/eskf_navi/rviz/: grid_map.rviz  navigation.rviz  topo_map.rviz
navi_eskf/src/eskf_navi/src/: coordinate_converter.cpp  grid_map.cpp  navigation_node.cpp  topology_map.cpp
(+101 files in other folders)
